[package]
name = "clash_lib"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
shadowsocks = ["dep:shadowsocks"]
tuic = ["dep:tuic", "dep:tuic-quinn", "dep:quinn", "dep:register-count"]
tracing = []
bench = ["dep:criterion"]
onion = ["arti-client/onion-service-client"]

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["net", "codec", "io", "compat"] }
futures = "0.3"
async-recursion = "1"
async-trait = "0.1"
hyper = { version = "1", features = ["http1","http2","client", "server"] }
hyper-util = "0.1"


# Network proto
http = { version = "1" }
http-body-util = "0.1.2"
socket2 = { version = "0.5", features = ["all"] }
tokio-tungstenite = "0.23.1"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2"] }
rustls = { version  = "0.23", default-features = false, features=["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# Error handing & logging
thiserror = "1"
anyhow = "1"
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", default-features = false, features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.25"
opentelemetry-jaeger-propagator = "0.3"
opentelemetry-otlp = { version = "0.17" }
opentelemetry-semantic-conventions = "0.16"

# Data structures
url = "2"
bytes = "1"
ipnet = "2"
regex = "1"
byteorder = "1"
lru_time_cache ="0.11"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
foreign-types-shared = "0.3"
network-interface = "2"
base64 = "0.22"

httparse = "1"
h2 = "0.4"
prost = "0.13"
tower = { version = "0.5", features = ["util"] }
libc = "0.2"

ip_network_table-deps-treebitmap = "0.5"
once_cell = "1"

# Algorithms
crc32fast = "1"
brotli = "6"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
chacha20poly1305 = "0.10"
aead = { version = "0.5", features = ["std"] }
aes = "0.8"
aes-gcm = "0.10"
cfb-mode = "0.8"
const-fnv1a-hash = "1"

filetime = "0.2"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }

tun = { git = "https://github.com/Watfaq/rust-tun.git", rev = "8f7568190f1200d3e272ca534baf8d1578147e18",  features = ["async"] }
netstack-lwip = { git = "https://github.com/Watfaq/netstack-lwip.git", rev = "2817bf82740e04bbee6b7bf1165f55657a6ed163" }

boringtun = { version = "0.6", git = "https://github.com/cloudflare/boringtun.git", rev = "f672bb6c1e1e371240a8d151f15854687eb740bb" }
smoltcp = { version = "0.11", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"] }

serde = { version = "1", features=["derive"] }
serde_yaml = "0.9"
serde_json = "1"
erased-serde = "0.4"

# DNS
hickory-client = "0.25.0-alpha.2"
hickory-resolver = "0.25.0-alpha.2"
hickory-server = { version = "0.25.0-alpha.2", features = ["dns-over-rustls", "dns-over-https-rustls"] }
hickory-proto = { version = "0.25.0-alpha.2", features = ["dns-over-rustls", "dns-over-https-rustls"]}

dhcproto = "0.12"
ring-compat = { version = "0.8", features = ["aead"] }

rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-oslog = { branch = "main", git = "https://github.com/Absolucy/tracing-oslog.git" }
tracing-appender = "0.2"

shadowsocks = { git = "https://github.com/Watfaq/shadowsocks-rust", rev = "450da0c", optional = true, features=["aead-cipher-2022","stream-cipher"] }
maxminddb = "0.24"
public-suffix = "0.1"
murmur3 = "0.5"

arti-client = { version = "0.22", default-features = false, features = ["tokio", "rustls", "static-sqlite"] }
tor-rtcompat = { version = "0.22", default-features = false }

# tuic
tuic = { tag = "v1.1.2-fix1", optional = true, git = "https://github.com/Itsusinn/tuic.git" }
tuic-quinn = { tag = "v1.1.2-fix1", optional = true, git = "https://github.com/Itsusinn/tuic.git" }
quinn = { version = "0.11", optional = true, default-features = false, features = ["futures-io", "runtime-tokio", "rustls"] }
register-count = { version = "0.1", optional = true }

console-subscriber = { version = "0.4" }
tracing-timing = { version = "0.6" }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"], optional = true }

memory-stats = "1.0.0"

[dev-dependencies]
tempfile = "3.12"
mockall = "0.13.0"
tokio-test = "0.4.4"
axum-macros = "0.4.0"
bollard = "0.17"
serial_test = "3.1.1"

[build-dependencies]
prost-build = "0.13"

[target.'cfg(macos)'.dependencies]
security-framework = "2.11.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_NetworkManagement_Rras",
]}