[package]
name = "stack-error-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0"
syn = "1.0"
syn2 = { version = "2.0", package = "syn", features = [
    "derive",
    "parsing",
    "printing",
    "clone-impls",
    "proc-macro",
    "extra-traits",
    "full",
] }