[package]
name = "watfaq_tuic"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[features]
docker-test = []

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
futures = "*"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
rustls = { version  = "0.23", default-features = false, features=["ring"] }

# Error handing & logging
thiserror = "2"
anyhow = "1"

# logging
time = { version = "0.3", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"

arc-swap = "1"
once_cell = "1"
tracing = "0.1"

# tuic
tuic = { tag = "v1.4.5", git = "https://github.com/Itsusinn/tuic.git" }
tuic-quinn = { tag = "v1.4.5", git = "https://github.com/Itsusinn/tuic.git" }
register-count = { version = "0.1" }
quinn = { version = "0.11", default-features = false, features = ["futures-io", "runtime-tokio", "rustls"] }

uuid = "*"

watfaq_types = { path = "../watfaq_types" }
watfaq_config = { path = "../watfaq_config" }
watfaq_state = { path = "../watfaq_state" }
watfaq_socket = { path = "../watfaq_socket" }
watfaq_resolver = { path = "../watfaq_resolver" }
watfaq_utils = { path = "../watfaq_utils" }
watfaq_error = { path = "../watfaq_error"}

[dev-dependencies]
tokio-test = "0.4"

